# json-extraction-qlora-dpo

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-colab.txt
artifacts/: README.md
artifacts/checkpoints/: README.md  dpo-full-colab_dpo_manifest.json  latest_model.json  sft-dev-smoke_adapter_manifest.json  sft-full-colab_adapter_manifest.json  sft-qwen2.5-1.5b-qlora-v1_adapter_manifest.json
artifacts/metrics/: README.md  baseline-qwen2.5-1.5b_diagnostics.json  baseline-qwen2.5-1.5b_metrics.json  (+15 more)
configs/: data_build.yaml  data_sources.yaml  dpo.yaml  eval.yaml  inference.yaml  model.yaml  sft.yaml
data/: README.md
notebooks/: 00_colab_setup.ipynb  00_data_audit.ipynb  01_baseline_eval.ipynb  02_sft_review.ipynb  03_preference_pair_audit.ipynb  04_dpo_review.ipynb  05_inference_benchmarks.ipynb  06_final_report.ipynb  07_vllm_benchmark_lab.ipynb
scripts/: benchmark_vllm.py  build_benchmark_promptsets.py  build_dataset_manifests.py  build_preference_pairs.py  check_vllm_health.py  compare_stages.py  eval_model.py  export_final_report.py  export_ollama_modelfile.py  prepare_eval_data.py  prepare_sft_data.py  render_benchmark_report.py  serve_vllm.sh  stop_vllm.sh  sync_repo_to_runtime.py  train_dpo.py  train_sft.py
tests/: test_benchmarking.py  test_colab_workflow.py  test_comparison_report.py  test_data_build.py  test_data_prep_scripts.py  test_data_registry.py  test_eval_model.py  test_inference.py  test_manifest_tracking.py  test_metrics.py  test_preference_pair_builder.py  test_prompt_formatting.py  test_reporting.py  test_runtime_context.py  test_sampling.py  test_schema_validation.py  test_scoring.py  test_source_adapters.py  test_sync_helper.py  test_train_dpo.py  test_train_sft.py
(+63 files in other folders)
