[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "json-extraction-qlora-dpo"
version = "0.1.0"
description = "Learning-first scaffold for schema-constrained JSON extraction with QLoRA and DPO."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Shreyash Reddy" }
]
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
train = [
  "accelerate>=0.30",
  "bitsandbytes>=0.48",
  "datasets>=2.18",
  "evaluate>=0.4",
  "matplotlib>=3.9",
  "peft>=0.10",
  "transformers>=4.40",
  "trl>=0.8",
]
inference = [
  "matplotlib>=3.9",
  "transformers>=4.40",
  "vllm>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/json_ft"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
